[package]
name = "lyricly"
version = "0.1.0"
edition = "2021"
description = "CLI for getting lyrics from songs"
license = "Apache-2.0"
authors = ["Tristan F."]
repository = "https://github.com/LeoDog896/lyricly/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
