[package]
name = "lyricly"
version = "0.2.0"
edition = "2021"
description = "CLI for getting lyrics from songs"
license = "Apache-2.0"
authors = ["Tristan F."]
repository = "https://github.com/LeoDog896/lyricly/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
thiserror = "1.0.37"
